## Process this file with automake to produce Makefile.in

EXTRA_DIST		= \
	one-level-actions.sh			\
	two-levels-actions.sh

AM_MAKEINFOFLAGS	= --no-split -I $(srcdir)/../examples

info_TEXINFOS		= mbfl.texi
mbfl_TEXINFOS		= fdl-1.3.texi lgpl-3.0.texi \
			  macros.texi sendmail-plain.sh sendmail-connector.sh

### end of file
