## Process this file with automake to produce Makefile.in

examplesdir		= $(datadir)/$(PACKAGE)/$(PACKAGE_VERSION)/examples
dist_examples_DATA	= at.sh compress.sh

if WANT_SENDMAIL

sendmailemacsdir	= $(datadir)/emacs/site-lisp
dist_sendmailemacs_DATA	= sendmail-mbfl.el

dist_bin_SCRIPTS	= sendmail-mbfl.sh

endif

### end of file
