## Process this file with automake to produce Makefile.in

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= mbfl.pc

bin_SCRIPTS		= mbfl-config

autoconfdir		= $(datadir)/aclocal/$(PACKAGE)/$(PACKAGE_VERSION)
autoconf_DATA		= mbfl.m4

### end of file
# Local Variables:
# mode: makefile-gmake
# End:
