## Process this file with automake to produce Makefile.in

pkgconfigdir		= $(libdir)/pkgconfig
dist_pkgconfig_DATA	= mbfl.pc

dist_bin_SCRIPTS	= mbfl-config

autoconfdir		= $(datadir)/aclocal/$(PACKAGE)/$(PACKAGE_VERSION)
dist_autoconf_DATA	= mbfl.m4

### end of file
# Local Variables:
# mode: makefile-gmake
# End:
